修改了时间同步逻辑